# CraftLink

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
chatcraft_src/resources/: AndroidManifest.xml
chatcraft_src/resources/assets/: crashlytics-build.properties
chatcraft_src/resources/res/anim/: slide_in_left.xml  slide_in_to_bottom.xml  slide_out_to_top.xml
chatcraft_src/resources/res/color/: check_box_color.xml
chatcraft_src/resources/res/drawable/: md_btn_selected_custom.xml  md_btn_selector_custom.xml  md_btn_unselected_custom.xml  progress_single_input_form.xml  radio.xml
chatcraft_src/resources/res/drawable-xxhdpi/: list_ripple_selector.xml  list_selector.xml
chatcraft_src/resources/res/layout-land/: fragment_chat.xml
chatcraft_src/resources/res/layout-land-v17/: fragment_chat.xml
chatcraft_src/resources/res/layout-v16/: md_dialog_input.xml  (+7 more)
chatcraft_src/sources/b/: a.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java  k.java  l.java  m.java  n.java  o.java  p.java  q.java  r.java  s.java  t.java  u.java
chatcraft_src/sources/okhttp3/: a.java  aa.java  ab.java  ac.java  ad.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java  k.java  l.java  m.java  n.java  o.java  p.java  q.java  r.java  s.java  t.java  u.java  v.java  w.java  x.java  y.java  z.java
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
tools/: generate_atlas.py  generate_atlas_multiversion.py
(+5910 files in other folders)
